ts-type-checker/tests/hidden_cases/test_files/numericIndexerConstraint1.ts
// @target: es2015
type e573e4wrXNNc = number;
class ML9 { foo() { } }
declare var x: { [index: string]: number; };
var p1NLoq: ML9 = x["one"]; // error
